tests/__snapshots__/api-expect-only-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect<string>().type.toBeString();
> 4 | expect.only.fail<string>().type.toBeString();
    | ^
  5 | 
  6 | expect.only.fail<never>().type.toBeString();
  7 | 

      at ./__typetests__/expect-only-fail.tst.ts:4:1

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

   9 |   test("is skipped?", () => {
  10 |     expect<never>().type.toBeVoid();
> 11 |     expect.only.fail<string>().type.toBeString();
     |     ^
  12 | 
  13 |     expect.only.fail<never>().type.toBeVoid();
  14 |   });

       at ./__typetests__/expect-only-fail.tst.ts:11:5

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  23 | test.only("is number?", () => {
  24 |   expect.skip<string>().type.toBeNumber();
> 25 |   expect.fail<number>().type.toBeNumber();
     |   ^
  26 | 
  27 |   expect.fail<never>().type.toBeVoid();
  28 | });

       at ./__typetests__/expect-only-fail.tst.ts:25:3

